# analytics-platform

./: .gitignore  README.md  airflow-docker-compose.yaml  pyproject.toml
dags/: prepare_data.py
infra/modules/glue/: main.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/managed_airflow/: main.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
infra/modules/redshift/: main.tf  variables.tf
infra/modules/storage/: locals.tf  main.tf  outputs.tf  variables.tf
infra/prod/: main.tf  variables.tf
misc/: airflow_requirements.txt  emr_default_extra_parameters.json
scripts/emr/: nyc_aggregate_emr.py
scripts/glue/: nyc_transform_raw_gluestudio.py  nyc_transform_raw_spark.py
sql/: 1-redshift-intro.sql  2-redshift-load.sql
