[tool.poetry]
name = "Analytics Platform"
version = "1.0.0"
description = "Comprehensive data platform for ingestion, processing and exposing for analytical workloads"
authors = ["Mateusz Polakowski <mateusz.polakowski.ds@gmailcom>"]

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = "2.2.2"
apache-airflow-providers-amazon = "2.4.0"
pytest = "^7.1.3"
black = "^22.8.0"
#pyspark = "2.4.3"  # some crazy dependency problems turned out, had to install it manually

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
